feat(commun): un carre, une entree, ses deux etiquettes
« Carres » et « Sites » offraient le meme objet deux fois : ms.square_number et ms.friendly_name sortent de la meme ligne monitoring_site. Cocher « 640380 » ou « Vallon » retenait exactement les memes lignes, sans que rien ne le dise, et deux carres homonymes se confondaient sous un meme nom - le defaut que #2992 avait corrige pour les points.

Un seul groupe « Carres » desormais, une entree par carre : « 640380 · Vallon » quand le nom existe, « 640380 » sinon.

Chaque dimension declare ou vivait son ancienne ecriture, en tete pour le carre et en queue pour le point, sans quoi une valeur de carre memorisee n aurait jamais ete rattrapee : le point etant qualifie PAR son carre, « 640380 » se lit aussi en tete de « 640380 · A1 ».

Closes #3157, closes #3145